# casual-review

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  PHASE3_NOTES.md  PLAN.md  README.md  context.md
.github/workflows/: ci.yml  release.yml
Formula/: casual-review.rb
benches/: throughput.rs
extensions/jetbrains/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
extensions/jetbrains/src/main/kotlin/com/casualreview/: Actions.kt  CrCli.kt  CrEvents.kt  CrService.kt  CrSettings.kt  CrStatusBarWidget.kt  CrToolWindow.kt  Model.kt
extensions/vscode/: .vscodeignore  README.md  package-lock.json  package.json
extensions/vscode/src/: extension.ts
extensions/zed/: Cargo.toml  README.md  extension.toml
extensions/zed/src/: lib.rs
fixtures/: eval_assertion_free.java  eval_assertion_free.py  eval_assertion_free.rs  eval_assertion_free.ts  eval_commented_code.java  eval_commented_code.py  eval_commented_code.rs  eval_commented_code.ts  eval_complexity.rs  eval_disabled_test.py  eval_disabled_test.rs  eval_disabled_test.ts  eval_empty_catch.py  eval_empty_catch.rs  eval_empty_catch.ts  eval_escape_hatch.ts  eval_java.java  eval_python.py  eval_rust.rs  eval_secrets.py  eval_typescript.ts  example-config.toml  sample.py  sample.rs  sample.ts  sample.tsx
scripts/: render-formula.py  theme-bench-reports.py
src/: cli.rs  comments.rs  config.rs  engine.rs  git_comments.rs  git_notes.rs  lib.rs  main.rs  notes.rs  notes_io.rs
src/diagnostic/: mod.rs  severity.rs  span.rs  suggestion.rs
src/git/: diff.rs  mod.rs
src/parse/: mod.rs
src/render/: github.rs  human.rs  json.rs  mod.rs  sarif.rs
src/rules/: any_type.rs  api_surface_change.rs  assertion_free_test.rs  bare_except.rs  commented_code.rs  complexity.rs  debug_print.rs  disabled_test.rs  empty_catch.rs  hardcoded_secret.rs  large_function.rs  mod.rs  parse_error.rs  todo_marker.rs  trailing_whitespace.rs  ts_escape_hatch.rs  unwrap_used.rs  util.rs
tests/: api_surface.rs  phase3_findings.rs  phase4_anchoring.rs  phase4_comments.rs  snapshots.rs
tests/snapshots/: api_surface__java_public_class_added.snap  api_surface__java_record_added.snap  api_surface__python_top_level_def_added.snap  api_surface__rust_private_change_ignored.snap  api_surface__rust_pub_added.snap  api_surface__rust_pub_removed.snap  api_surface__rust_pub_struct_renamed.snap  api_surface__ts_const_export.snap  api_surface__ts_export_added.snap  api_surface__ts_export_removed.snap  snapshots__assertion_free_java_no_assert.snap  snapshots__assertion_free_python_no_assert.snap  snapshots__assertion_free_rust_test_no_assert.snap  snapshots__assertion_free_rust_tokio_test.snap  snapshots__assertion_free_typescript_it_no_expect.snap  snapshots__assertion_free_typescript_it_with_expect.snap  snapshots__complexity_java_switch_and_catch.snap  snapshots__complexity_rust_over_threshold.snap  snapshots__complexity_typescript_with_ternary.snap  snapshots__fixme_and_xxx_markers.snap  snapshots__hardcoded_secrets_basic.snap  snapshots__java_commented_code.snap  snapshots__java_empty_catch.snap  snapshots__java_print_stack_trace.snap  snapshots__java_todo_and_debug.snap  snapshots__python_bare_except_vs_typed.snap  snapshots__python_commented_code.snap  snapshots__python_debug_calls.snap  snapshots__python_disabled_test_pytest_skip.snap  snapshots__python_empty_except.snap  snapshots__python_todo_marker.snap  snapshots__python_trailing_whitespace.snap  snapshots__rust_commented_code.snap  snapshots__rust_debug_macros.snap  snapshots__rust_disabled_test_ignore.snap  snapshots__rust_empty_err_arm.snap  snapshots__rust_large_function.snap  snapshots__rust_parse_error.snap  snapshots__rust_todo_marker.snap  snapshots__rust_trailing_whitespace.snap  (+12 more)
