[package]
name = "casual-review"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Ultra-fast code review CLI with rustc-quality diagnostics"
license = "MIT OR Apache-2.0"

[[bin]]
name = "cr"
path = "src/main.rs"

[lib]
name = "casual_review"
path = "src/lib.rs"

[dependencies]
# CLI + error handling
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }

# Diagnostic rendering
ariadne = "0.4"

# Git plumbing (diff resolution, blob fetch)
git2 = { version = "0.19", default-features = false }

# tree-sitter core + per-language grammars
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-java = "0.21"

# Parallelism + filesystem walking
rayon = "1.10"
ignore = "0.4"

# Pattern matching (hardcoded-secret) + lazy statics
regex = "1"
once_cell = "1"

# Serialization (JSON output, snapshot tests)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Structured logging (RUST_LOG, --verbose)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }      # snapshot testing
assert_cmd = "2"                                     # CLI integration tests
tempfile = "3"                                       # tempdirs for tests
criterion = { version = "0.5", features = ["html_reports"] }  # LOC/sec benchmarks

[[bench]]
name = "throughput"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
