[package]
name = "casual-review"
version = "2026.4.28"
edition = "2021"
rust-version = "1.80"
description = "Ultra-fast code review CLI with rustc-quality diagnostics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/grahambrooks/casual-review"
homepage = "https://github.com/grahambrooks/casual-review"
readme = "README.md"
# CalVer: YYYY.M.D — year, month (1-12), day-of-month (1-31). Same-day
# re-releases bump to the next day, or use VERSION=... explicitly.

[[bin]]
name = "cr"
path = "src/main.rs"

[lib]
name = "casual_review"
path = "src/lib.rs"

[dependencies]
# CLI + error handling
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }

# Diagnostic rendering
ariadne = "0.4"

# Git plumbing (diff resolution, blob fetch).
# 0.20+ required: 0.19's libgit2-sys 0.17 fails to link advapi32 on Windows
# (missing CryptGenRandom, OpenProcessToken, Reg* symbols).
git2 = { version = "0.20", default-features = false }

# tree-sitter core + per-language grammars
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-java = "0.21"

# Parallelism + filesystem walking
rayon = "1.10"
ignore = "0.4"

# Pattern matching (hardcoded-secret) + lazy statics + config files
regex = "1"
once_cell = "1"
glob = "0.3"

# Serialization (JSON output, snapshot tests, TOML config)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Structured logging (RUST_LOG, --verbose)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }      # snapshot testing
assert_cmd = "2"                                     # CLI integration tests
tempfile = "3"                                       # tempdirs for tests
criterion = { version = "0.5", features = ["html_reports"] }  # LOC/sec benchmarks

[[bench]]
name = "throughput"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# unwrap_used/expect_used are intentionally not blanket-denied:
# regex constants in hardcoded-secret and post-insert HashMap/Option
# lookups are legitimate uses. We rely on developer judgment plus the
# default clippy lint set (which still catches real correctness bugs).
